// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorAlert should add a prefix if given 1`] = `
<div>
  <div
    class="alert alert-danger"
  >
    <svg
      class="mdi-icon icon icon-inline"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M13,13H11V7H13M13,17H11V15H13M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z"
      />
    </svg>
     
    <strong>
      An error happened
      :
    </strong>
     
    <span
      class="markdown"
    >
      An error happened
    </span>
  </div>
</div>
`;

exports[`ErrorAlert should omit the icon if icon={false} 1`] = `
<div>
  <div
    class="alert alert-danger"
  >
     
     
    <span
      class="markdown"
    >
      An error happened
    </span>
  </div>
</div>
`;

exports[`ErrorAlert should render a Go multierror nicely 1`] = `
<div>
  <div
    class="alert alert-danger"
  >
    <svg
      class="mdi-icon icon icon-inline"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M13,13H11V7H13M13,17H11V15H13M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z"
      />
    </svg>
     
     
    <span
      class="markdown"
    >
      <ul>
        

        <li>
          Additional property asdasd is not allowed
        </li>
        

        <li>
          projectQuery.0: String length must be greater than or equal to 1
        </li>
        

      </ul>
    </span>
  </div>
</div>
`;

exports[`ErrorAlert should render an Error object as an alert 1`] = `
<div>
  <div
    class="alert alert-danger"
  >
    <svg
      class="mdi-icon icon icon-inline"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M13,13H11V7H13M13,17H11V15H13M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z"
      />
    </svg>
     
     
    <span
      class="markdown"
    >
      An error happened
    </span>
  </div>
</div>
`;
